--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len\n",
+    "num_of_repeats = len()\n",
     "num_of_repeats # 3"
    ]
   },
