--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries)-len(countries)\n",
+    "num_of_repeats = len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
