--- a/index.ipynb
+++ b/index.ipynb
@@ -434,22 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2"
+       "12"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries)\n",
+    "num_of_repeats = len(countries)\n",
     "num_of_repeats # 3"
    ]
   },
